# mcp-tour

./: .env.example  LICENSE  README.md  pyproject.toml  requirements.txt
mcp_tour/: server.py
mcp_tour/hosts/: __init__.py  claude_desktop.py  cursor.py
