[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-tour"
version = "0.1.0"
description = "MCP server providing Korea Tourism Organization APIs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.4.1",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
]
authors = [{ name = "Your Name", email = "your.email@example.com" }]

[project.urls]
Repository = "https://github.com/tjwodud04/mcp-tour.git"

[project.scripts]
mcp-tour = "mcp_tour:server"

[tool.hatch.build.targets.wheel]
packages = ["mcp_tour"]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "ruff>=0.11.2",
    "twine>=6.1.0",
]